<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <GVL Name="Visu" Id="{369a334f-b2e8-4583-81df-e0bc87bd7787}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

visuStingToBeSent :	 STRING (255);
visuReceivedString:	STRING(255);
visuStatus:		STRING(255);
visuButton: BOOL;
visuResetError:BOOL;
visuError:BOOL;
visuTRigger:BOOL;
visuStatusTCPIP:STRING(255);
visuStatusCommand:STRING(255);
visuStepTCPIP:INT;
visuStepCommand:INT;




END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>